--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 .DS_Store
-VILTMaker/Keys.plist
+/VILTMaker/Keys.plist
 
 ## Build generated
 build/
