--- a/VILTMaker/OOSI/plists/0003.plist
+++ b/VILTMaker/OOSI/plists/0003.plist
@@ -94,6 +94,72 @@
 	<dict/>
 	<key>labels</key>
 	<dict>
+		<key>A</key>
+		<dict>
+			<key>x</key>
+			<integer>21</integer>
+			<key>y</key>
+			<integer>161</integer>
+			<key>size</key>
+			<integer>50</integer>
+			<key>text</key>
+			<string>A</string>
+		</dict>
+		<key>B</key>
+		<dict>
+			<key>x</key>
+			<integer>341</integer>
+			<key>y</key>
+			<integer>676</integer>
+			<key>size</key>
+			<integer>50</integer>
+			<key>text</key>
+			<string>B</string>
+		</dict>
+		<key>C</key>
+		<dict>
+			<key>x</key>
+			<integer>700</integer>
+			<key>y</key>
+			<integer>191</integer>
+			<key>size</key>
+			<integer>50</integer>
+			<key>text</key>
+			<string>C</string>
+		</dict>
+		<key>D</key>
+		<dict>
+			<key>x</key>
+			<integer>105</integer>
+			<key>y</key>
+			<integer>407</integer>
+			<key>size</key>
+			<integer>50</integer>
+			<key>text</key>
+			<string>D</string>
+		</dict>
+		<key>E</key>
+		<dict>
+			<key>x</key>
+			<integer>561</integer>
+			<key>y</key>
+			<integer>403</integer>
+			<key>size</key>
+			<integer>50</integer>
+			<key>text</key>
+			<string>E</string>
+		</dict>
+		<key>F</key>
+		<dict>
+			<key>x</key>
+			<integer>337</integer>
+			<key>y</key>
+			<integer>238</integer>
+			<key>size</key>
+			<integer>50</integer>
+			<key>text</key>
+			<string>F</string>
+		</dict>
 		<key>description</key>
 		<dict>
 			<key>x</key>
