Docomo Speech API Updated.

--- a/VILTMaker/Info.plist
+++ b/VILTMaker/Info.plist
@@ -30,6 +30,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>このアプリはマイクを使用します。</string>
+	<key>NSCameraUsageDescription</key>
+	<string>このアプリはカメラを使用します。</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
