--- a/VILTMaker/Info.plist
+++ b/VILTMaker/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>フォトライブラリを使用します。</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>音声認識のために使用します。</string>
 	<key>CFBundleDevelopmentRegion</key>
